# sidplay1reloaded

./: 1.36.33-990220.txt  1.36.33.txt  1.36.34-oss.txt  HV_SIDS.FAQ  Makefile  Makefile.in  NEWS  PROBLEMS  README.txt  STIL.FAQ  STIL.faq  config.cache  config.status  configure  configure.in  hv_sids.faq  libsidplay  libsidplay-1.36.25-optimize.patch  sidmusic-faqs-19990515.patch  sidmusic-faqs-980517.patch  sidplay.spec
console/: Makefile  Makefile.bak  Makefile.in  audiodrv.h  sid2wav.cpp  sidcon.cpp  sidplay.cpp
console/audio/hpux/: audiodrv.cpp  audiodrv.h
console/audio/linux/: audiodrv.cpp
console/audio/linux-pcsnd/: audiodrv.cpp
console/audio/oss/: audiodrv.cpp  audiodrv.h
console/audio/sgi/: audiodrv.cpp  audiodrv.h
console/audio/sparc/: audiodrv.cpp  audiodrv.h
debian/: README.Debian  TODO  changelog  control  copyright  doc-base  docs  menu  postinst  rules  shlibs
html-info/: index.html  info.html
libsidplay/: DEVELOPER  Makefile  Makefile.bak  Makefile.in  eeconfig.cpp  eeconfig.h  player.cpp  sidtune.cpp
libsidplay-1.36.15/: COPYRIGHT  DEVELOPER  INSTALL  Makefile  eeconfig.cpp  eeconfig.h  player.cpp  sidtune.cpp
libsidplay-1.36.15/emu/: 6510_.cpp  6510_.h  6581_.cpp  enve_ac.h  enve_dc.h  enve_dl.h  envelope.cpp  envelope.h  mixing.cpp  opstruct.h  samples.cpp  samples.h  wave6581.h
libsidplay-1.36.15/fformat/: fformat_.cpp  info_.cpp  info_.h  mus_.cpp  mus_.h  pp_.cpp  pp_.h  psid_.cpp  psid_.h  sid_.cpp  sid_.h
libsidplay-1.36.15/include/: compconf.h  emucfg.h  fformat.h  myendian.h  mytypes.h  player.h  pp.h  sidtune.h  smart.h  version.h
libsidplay/emu/: 6510_.cpp  6510_.h  6581_.cpp  enve_ac.h  enve_dc.h  envelope.cpp  envelope.h  opstruct.h  samples.cpp  samples.h
libsidplay/fformat/: fformat_.cpp  info_.cpp  info_.h  mus_.cpp  mus_.h  pp_.cpp  pp_.h  psid_.cpp  psid_.h  sid_.cpp  sid_.h
libsidplay/include/: compconf.h  config.h  config.h.in  emucfg.h  fformat.h  fixpoint.h  myendian.h  mytypes.h  player.h  pp.h  sidtune.h  smart.h  version.h
sidplay-console/: INSTALL  Makefile  sid2wav.cpp  sidplay.cpp
sidplay-console/audio/: README  hpux_audiodrv.cpp  hpux_audiodrv.h  linux_audiodrv.cpp  linux_pcsnd_audiodrv.cpp  linux_pcsnd_audiodrv.h  sgi_audiodrv.h  sparc_audiodrv.cpp  sparc_audiodrv.h
sidplay-info/: footnode.html  index.html  node1.html  node2.html  node3.html  node4.html  node5.html  node6.html  node7.html  node8.html
